-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Replication
-
None
-
Fully Compatible
-
ALL
-
RPL 0 3/13/15
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This tests that group should fail:
https://github.com/mongodb/mongo/blob/r2.6.0-rc0/jstests/replsets/maintenance2.js#L51
However, the group command actually succeeds but the test still passes anyway because db here is undefined:
https://github.com/mongodb/mongo/blob/r2.6.0-rc0/jstests/replsets/maintenance2.js#L4
Note: the count command below actually fails with:
{ "note" : "from execCommand", "ok" : 0, "errmsg" : "node is recovering" }