SERVER-13009 make group command fail in maintenance mode and update replsets/maintenance2.js